--- a/document/Kubernetes.tex
+++ b/document/Kubernetes.tex
@@ -1,5 +1,3 @@
-% TODO: "z.B." umwandeln
-
 \documentclass[11pt,a4paper]{article}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
@@ -98,12 +96,12 @@ Ist beispielsweise eine Anwendung darauf angewiesen eine bestimmte Abhängigkeit
 benötigt eine Version \(\geq 1.4\) derselben Abhängigkeit, lässt sich das nur schwer vereinbaren.
 Zum anderen erschwert dieser Aufbau eine effiziente Ressourcenverteilung.
 Selbst wenn eine Anwendung alleine auf einem Rechner betrieben wird, um zum Beispiel Konflikte zu anderen
-Anwendungen zu vermeiden, muss dieser Rechner ausreichende Kapazitäten haben, um die höchsten Anfragespitzen an diese Anwendung zu verarbeiten.
-Selbst dann, wenn diese Anfragespitzen nur äußerst selten erreicht werden \cite{Schmeling_Dargatz_2022} (S. 115-116).
+Anwendungen zu vermeiden, muss dieser Rechner ausreichende Kapazitäten haben, um die höchsten Anfragespitzen an diese Anwendung zu verarbeiten -
+selbst dann, wenn diese Anfragespitzen nur äußerst selten erreicht werden \cite{Schmeling_Dargatz_2022} (S. 115-116).
 
 Eine Weiterentwicklung dieser Bare-Metal-Architektur waren \emph{virtuelle Maschinen}.
 Virtuelle Maschinen erlauben es, auf derselben Hardware mehrere virtuelle Instanzen eines
-Systems zu nutzen. Die Instanzen nutzen dabei nicht direkt die physischen Ressourcen, sondern lediglich virtuelle,
+Systems zu nutzen. Die Instanzen nutzen dabei nicht direkt die physischen, sondern lediglich virtuelle Ressourcen,
 die durch Software nachgebildet werden.
 Dadurch, dass verschiedene Anwendungen in verschiedenen virtuellen Maschinen betrieben werden, können Abhängigkeitskonflikte zwischen Anwendungen
 vermieden werden. Weiterhin sind virtuelle Maschinen leichter auszubringen und zu administrieren als Bare-Metal-Lösungen.
@@ -111,14 +109,18 @@ Grundsätzlich können mit diesem Ansatz Anwendungen auch flexibler und skalierb
 Leistungsfähige Hardware kann Anfragespitzen einer Anwendung in einer virtuellen Maschine abfangen und
 zu anderen Zeiten anderen virtuellen Maschinen mit anderen
 Anwendungen diese Ressourcen zuweisen.
-Obwohl das schon einige Verbesserungen im Vergleich zu Bare-Metal-Lösungen sind, haben auch virtuelle Maschinen ihre eigenen Limitationen.
-Da virtuelle Maschinen jeweils Ressourcen für ein eigenes Betriebssystem beanspruchen, geht vergleichsweise viel Leistung verloren,
-die besser in der Anwendung genutzt werden könnte \cite{kofler2021docker} (S. 48).
+Jedoch haben auch virtuelle Maschinen ihre eigenen Grenzen.
+Da sie jeweils Ressourcen für ein eigenes Betriebssystem beanspruchen, geht vergleichsweise viel Leistung verloren,
+die damit nicht in der Anwendung genutzt werden kann \cite{kofler2021docker} (S. 48).
 
-Die nächste Stufe der Weiterentwicklung waren (Software-)\emph{Container}. Container haben einige Gemeinsamkeiten mit virtuellen Maschinen, doch der wesentliche Unterschied ist,
-dass Container deutlich leichtgewichtiger sind. Das wird unter anderem dadurch erreicht, dass sie, statt ein komplett eigenes Betriebssystem zu verwenden,
-Anteile des Host-Betriebssystems mitnutzen. Dadurch sind die Baupläne (sog. \emph{Images}) für Container im Allgemeinen kleiner als für klassische virtuelle Maschinen.
-Durch den verringerten Overhead können auf gleicher Hardware auch mehr Container parallel betrieben werden, als es mit virtuellen Maschinen möglich wäre.
+Die nächste Stufe der Weiterentwicklung waren (Software-)\emph{Container}.
+Container haben einige Gemeinsamkeiten mit virtuellen Maschinen, doch der wesentliche Unterschied ist,
+dass Container deutlich leichtgewichtiger sind. Das wird unter anderem dadurch erreicht, dass sie,
+statt ein komplett eigenes Betriebssystem zu verwenden,
+Anteile des Host-Betriebssystems mitnutzen. Dadurch sind die Baupläne (sog. \emph{Images})
+für Container im Allgemeinen kleiner als für klassische virtuelle Maschinen.
+Durch den verringerten Overhead können auf gleicher Hardware auch mehr Container parallel betrieben werden,
+als es mit virtuellen Maschinen möglich wäre.
 Insgesamt können mit Containern Leistungswerte erreicht werden, die die von virtuellen Maschinen deutlich übertreffen,
 und nahezu an die von Bare-Metal heranreichen \cite{1272998.1273025}.
 Durch diesen Umstand und dadurch, dass Container meist innerhalb weniger Sekunden gestartet werden können, sind diese besonders geeignet,
@@ -127,12 +129,12 @@ um flexibel auf unterschiedliche Anfrageintensitäten zu reagieren und Ressource
 Abbildung \ref{fig:arch-vergleich} visualisiert exemplarisch, welche Ebenen bei Bare-Metal-Architekturen, virtuellen Maschinen und Containern
 jeweils zwischen Hardware und den Anwendungen liegen und wie Anwendungen voneinander isoliert werden.
 
-% \begin{figure}[h]
-%   \centering
-%   \includegraphics[width=1\textwidth]{./media/7899247 (eigen).png}
-%   \caption{Eine Gegenüberstellung von Bare-Metal-Architekturen, virtuellen Maschinen und Containern zeigt die einzelnen Ebenen und die Trennung von Anwendungen \cite{7899247}.}
-%   \label{fig:arch-vergleich}
-% \end{figure}
+\begin{figure}[h]
+  \centering
+  \includegraphics[width=1\textwidth]{./media/7899247 (eigen).png}
+  \caption{Eine Gegenüberstellung von Bare-Metal-Architekturen, virtuellen Maschinen und Containern zeigt die einzelnen Ebenen und die Trennung von Anwendungen \cite{7899247}.}
+  \label{fig:arch-vergleich}
+\end{figure}
 
 Container eignen sich besonders, um \emph{Microservice-Architekturen} zu betreiben \cite{7158965}. Dabei handelt es sich um die
 Entwicklung von Anwendungen, indem sie in kleine, unabhängige (Micro-)Services aufgeteilt werden. Jeder Microservice gehört zu
@@ -156,14 +158,15 @@ Es abstrahiert dazu von allen beteiligten Rechnern und deren Ressourcen und biet
 
 Es handelt sich um eine Software, die sich der Ausbringung (Deployment),
 der Skalierung und der Überwachung (Monitoring) von Containern widmet.
-Dieser Vorgang wird auch als Container-Orchestrierung
+Dieser Vorgang wird als Container-Orchestrierung
 oder als Container-Management bezeichnet \cite{Bisong2019} (S. 664).
 In diesem Zusammenhang ist Kubernetes auch als das \emph{Betriebssystem der Cloud} bekannt
 \cite{Schmeling_Dargatz_2022} (S. 4).
 Entwickelt wurde Kubernetes von Google. Dort wurde seit den frühen 2000er Jahren
 ein selbst entwickeltes Container-Management-System namens \emph{Borg} \cite{43438} genutzt,
 um Googles Services möglichst performant zu betreiben.
-Im Jahr 2013 wurde \emph{Borg} von dessen Nachfolger \emph{Omega} abgelöst. Im selben Jahr erschien auch \emph{Docker}, was ein wesentlicher Baustein des Kubernetes
+Im Jahr 2013 wurde \emph{Borg} von dessen Nachfolger \emph{Omega} abgelöst. Im selben Jahr erschien auch \emph{Docker},
+was ein wesentlicher Baustein des Kubernetes
 Projekts werden sollte \cite{ibm_history}.
 
 Die drei bei Google beschäftigten Ingenieure Craig McLuckie, Joe Beda und Brendan Burns setzten sich damals dafür ein,
@@ -177,9 +180,6 @@ In den folgenden Jahren wuchs der Nutzerkreis von Kubernetes
 rasch an und es konnte sich deutlich gegen konkurrierende Anwendungen durchsetzen.
 Heutzutage ist Kubernetes, nach Linux, das zweitgrößte Open-Source-Projekt der Welt und wird von 71 \% der Fortune 100 Unternehmen genutzt
 \cite{ibm_history} \cite{kubernetes_journey}.
-Auf der Kubernetes Website (\lstinline|https://kubernetes.io|)
-wird es als ein Open-Source-System für die automatisierte Ausbringung, Skalierung
-und Steuerung von containerisierten Anwendungen beschrieben \cite{kubernetes.io_start}.
 
 Im Folgenden sollen zunächst Container als wesentliche Grundlage für Kubernetes
 beschrieben werden.
@@ -195,7 +195,7 @@ liegen. Zum anderen gibt es die Technologie \emph{Docker}, die sich als die heut
 herausgestellt hat und daher auch für die folgenden Kapitel als Grundlage angenommen wird \cite{Bentaleb_Belloum_Sebaa_El-Maouhab_2021}.
 
 Um den Begriff des (Docker-)Containers zu verstehen, wird zunächst der Begriff \emph{Image} benötigt.
-Ein Image kann wie in der Einleitung bereits beschrieben als ein Bauplan für einen Container gesehen werden.
+Ein Image kann als ein Bauplan für einen Container gesehen werden.
 Es stellt ein read-only Dateisystem als Basis für den Container zur Verfügung. Der Container nimmt an seinem Image
 keine Änderungen vor. Stattdessen wird jedes Hinzufügen und jede Änderung während der Laufzeit des Containers in einem
 getrennten Overlay-System behandelt.
@@ -203,13 +203,13 @@ Das heißt, dass diese Änderungen in einem Verzeichnis auf dem Host-System abge
 Dadurch können beliebig viele Container von demselben Image abgeleitet werden \cite{kofler2021docker} (S. 140).
 Eine Visualisierung dieses Konzepts ist in Abbildung \ref{fig:overlay} dargestellt.
 
-% \begin{figure}[h]
-%   \centering
-%   \includegraphics[width=0.5\textwidth]{./media/kofler2021docker S.140.png}
-%   \caption{Ein von einem Image abgeleiteter Container hat ein eigenes Dateisystem für Lese- und Schreibvorgänge, das
-%     von dem Dateisystem des Images getrennt ist \cite{kofler2021docker} (S. 140).}
-%   \label{fig:overlay}
-% \end{figure}
+\begin{figure}[h]
+  \centering
+  \includegraphics[width=0.5\textwidth]{./media/kofler2021docker S.140.png}
+  \caption{Ein von einem Image abgeleiteter Container hat ein eigenes Dateisystem für Lese- und Schreibvorgänge, das
+    von dem Dateisystem des Images getrennt ist \cite{kofler2021docker} (S. 140).}
+  \label{fig:overlay}
+\end{figure}
 
 Für viele populäre Anwendungen gibt es vorgefertigte Images, die kostenfrei aus im Internet verfügbaren
 Container-Repositories (zum Beispiel \lstinline|https://hub.docker.com|) heruntergeladen werden können.
@@ -222,13 +222,13 @@ zum Beispiel durch das Hinzufügen von Dateien,
 oder dem Ändern von Umgebungsvariablen angepasst werden soll. Dieses \emph{Dockerfile} wird dann für den \emph{build}
 eines neuen Images verwendet \cite{kofler2021docker} (S. 81-82).
 
-Aus dem erstellten Image können dann Container abgeleitet werden. Ein Container ist insofern „flüchtig“ als dass er nach seiner
+Aus dem erstellten Image können dann Container abgeleitet werden. Ein Container ist insofern „flüchtig“, als dass er nach seiner
 Beendigung restlos gelöscht wird. Bei einem Neustart enthält er wieder nur die Daten, die vorher durch das Image definiert wurden.
 Natürlich gibt es Anwendungsfälle, in denen die persistente Speicherung von Daten durch einen Container gewünscht ist,
 beispielsweise wenn
 eine Datenbank in einem Container betrieben wird. Für diesen Fall gibt es das Konzept der \emph{Volumes}.
 Ein Volume spiegelt einen definierten Speicherbereich aus dem Dateisystem des Containers auf das Host-System.
-Wird ein Container beendet und durch einen neuen ersetzt, bindet dieser das Volume in sein Dateisystem ein übernimmt
+Wird ein Container beendet und durch einen neuen ersetzt, bindet dieser das Volume in sein Dateisystem ein und übernimmt
 dabei die Daten seines beendeten Vorgängers \cite{kofler2021docker} (S. 44-45).
 
 Die in diesem Kapitel beschriebenen Konzepte sind ausreichend, um Container zu betreiben.
@@ -260,7 +260,7 @@ Jede Maschine wird dabei als ein \emph{Node} (deutsch: Knoten) bezeichnet. Diese
 Für viele Cluster reicht ein Master Node aus. In Hochverfügbarkeitsszenarien oder bei mehreren
 tausend Worker Nodes kann es jedoch auch mehrere Master Nodes geben \cite{Schmeling_Dargatz_2022} (S. 7).
 Wie die Namen vermuten lassen, ist der Master Node für die Orchestrierung
-des Systems verantwortlich während die Worker Nodes bestimmte Aufgaben ausführen \cite{Bentaleb_Belloum_Sebaa_El-Maouhab_2021}.
+des Systems verantwortlich, während die Worker Nodes bestimmte Aufgaben ausführen \cite{Bentaleb_Belloum_Sebaa_El-Maouhab_2021}.
 Für den Spezialfall eines \emph{Single-Node-Clusters} kann dieser einzelne Node auch die Rolle von sowohl
 Master als auch Worker übernehmen.
 
@@ -273,13 +273,13 @@ die in Abbildung \ref{fig:containerschiff} dargestellt ist. Dort gibt es mehrere
 Nach der Erklärung der Node-Komponenten werden die wichtigsten Ressourcen
 von Kubernetes beschrieben und anhand von kurzen Beispielen vorgestellt.
 
-% \begin{figure}[h]
-%   \centering
-%   \includegraphics[width=1\textwidth]{./media/Schmeling_Dargatz_2022 S.7.png}
-%   \caption{Die verschiedenen Komponenten von Master und Worker Nodes können mit den
-%     verschiedenen Komponenten eines Leitschiffs und mehrerer Containerschiffe verglichen werden. \cite{Schmeling_Dargatz_2022} (S. 7).}
-%   \label{fig:containerschiff}
-% \end{figure}
+\begin{figure}[h]
+  \centering
+  \includegraphics[width=1\textwidth]{./media/Schmeling_Dargatz_2022 S.7.png}
+  \caption{Die verschiedenen Komponenten von Master und Worker Nodes können mit den
+    verschiedenen Komponenten eines Leitschiffs und mehrerer Containerschiffe verglichen werden. \cite{Schmeling_Dargatz_2022} (S. 7).}
+  \label{fig:containerschiff}
+\end{figure}
 
 \subsection{Master Node Komponenten}
 \label{sec:MasterNodeKomponenten}
@@ -359,7 +359,7 @@ Ressourcen werden in Kubernetes meist in Form von \emph{.YAML-Dateien} definiert
 die auch als \emph{Kubernetes-Manifeste} bezeichnet werden.
 Eine mögliche minimale Konfiguration könnte beispielsweise wie in Listing \ref{lst:pod-config} aussehen.
 
-% \lstinputlisting[caption={Ein beispielhaftes Kubernetes-Manifest zur Konfiguration eines Pods \cite{Schmeling_Dargatz_2022} (S. 20).}, label=lst:pod-config]{../kubernetes/nginx/pod.yaml}
+\lstinputlisting[caption={Ein beispielhaftes Kubernetes-Manifest zur Konfiguration eines Pods \cite{Schmeling_Dargatz_2022} (S. 20).}, label=lst:pod-config]{../kubernetes/nginx/pod.yaml}
 
 Ein Kubernetes-Manifest ist hierarchisch aufgebaut
 und enthält stets die gleichen vier übergeordneten Schlüssel.
@@ -397,10 +397,10 @@ Weiterhin wird angezeigt, dass noch kein Neustartversuch unternommen wurde
 und der Pod seit 18 Sekunden existiert.
 Bei Bedarf kann der Pod mit \lstinline|kubectl delete pod webserver| wieder gelöscht werden.
 
-% \begin{lstlisting}[caption={Der Pod wurde erfolgreich gestartet \cite{Schmeling_Dargatz_2022} (S. 21).}, label={lst:pod-state}]
-% NAME        READY   STATUS    RESTARTS   AGE
-% webserver   1/1     Running   0          18s
-% \end{lstlisting}
+\begin{lstlisting}[caption={Der Pod wurde erfolgreich gestartet \cite{Schmeling_Dargatz_2022} (S. 21).}, label={lst:pod-state}]
+NAME        READY   STATUS    RESTARTS   AGE
+webserver   1/1     Running   0          18s
+\end{lstlisting}
 
 \subsection{ReplicaSets}
 Pods bieten eine Grundlage, um Anwendungen flexibel zu gestalten und
@@ -422,18 +422,18 @@ erfolgt unter dem Schlüssel \emph{template} \cite{Schmeling_Dargatz_2022} (S. 2
 Wie auch schon bei den Pods kann dieses ReplicaSet mit dem Befehl
 \lstinline|kubectl create -f <Pfad/zum/Manifest>| erstellt werden \cite{Schmeling_Dargatz_2022} (S. 24-29).
 
-% \lstinputlisting[caption={Ein beispielhaftes Manifest zur Konfiguration eines ReplicaSets mit drei Pods \cite{Schmeling_Dargatz_2022} (S. 26).}, label=lst:rs-config]{../kubernetes/nginx/replicaset.yaml}
+\lstinputlisting[caption={Ein beispielhaftes Manifest zur Konfiguration eines ReplicaSets mit drei Pods \cite{Schmeling_Dargatz_2022} (S. 26).}, label=lst:rs-config]{../kubernetes/nginx/replicaset.yaml}
 
 Das Kommando \lstinline|kubectl get pods| erzeugt eine mit Listing \ref{lst:rs-pods}
 vergleichbare Ausgabe. Dabei ist anzumerken, dass jeder Pod den Namen des ReplicaSets,
 ergänzt um ein automatisch generiertes Suffix, erhält.
 
-% \begin{lstlisting}[caption={Drei Pods wurden erfolgreich gestartet \cite{Schmeling_Dargatz_2022} (S. 27).}, label={lst:rs-pods}]
-% NAME              READY   STATUS    RESTARTS   AGE
-% webserver-86mvm   1/1     Running   0          35s
-% webserver-bxvwp   1/1     Running   0          35s
-% webserver-wzrs8   1/1     Running   0          35s
-% \end{lstlisting}
+\begin{lstlisting}[caption={Drei Pods wurden erfolgreich gestartet \cite{Schmeling_Dargatz_2022} (S. 27).}, label={lst:rs-pods}]
+NAME              READY   STATUS    RESTARTS   AGE
+webserver-86mvm   1/1     Running   0          35s
+webserver-bxvwp   1/1     Running   0          35s
+webserver-wzrs8   1/1     Running   0          35s
+\end{lstlisting}
 
 Kompakter kann der Status des ReplicaSets mit dem Befehl \lstinline|kubectl get rs webserver|
 abgerufen werden. Listing \ref{lst:rs-state} enthält eine mögliche Ausgabe.
@@ -444,14 +444,14 @@ Das Replizieren von Anwendungen ist grundsätzlich kein neues Phänomen, aber
 die wesentliche Neuerung durch Kubernetes ist, dass die Replikation einheitlich
 und anwendungsunabhängig erfolgen kann \cite{Schmeling_Dargatz_2022} (S. 29).
 
-% \begin{lstlisting}[caption={Ein ReplicaSet mit drei erfolgreich gestarteten Instanzen \cite{Schmeling_Dargatz_2022} (S. 27).}, label={lst:rs-state}]
-% NAME        DESIRED   CURRENT   READY   AGE
-% webserver   3         3         3       8s
-% \end{lstlisting}
+\begin{lstlisting}[caption={Ein ReplicaSet mit drei erfolgreich gestarteten Instanzen \cite{Schmeling_Dargatz_2022} (S. 27).}, label={lst:rs-state}]
+NAME        DESIRED   CURRENT   READY   AGE
+webserver   3         3         3       8s
+\end{lstlisting}
 
 \subsection{Deployments}
 \label{sec:Deployments}
-Ein \emph{Deployment} ist ein Konzept, das im Schwerpunkt genutzt wird, um Änderungen an Anwendungen auszubringen.
+Ein \emph{Deployment} ist ein Konzept, das genutzt wird, um Änderungen an Anwendungen auszubringen.
 Das Szenario, das ein Deployment notwendig macht, kann wie folgt beschrieben werden:
 
 Eine Anzahl von Pods wurde im Rahmen eines ReplicaSets auf Basis eines gemeinsamen Images erstellt.
@@ -497,19 +497,19 @@ Alternativ kann nach Initialisierung des Deployments die Anzahl der Replikatione
 dem Befehl \lstinline|kubectl scale --replicas=<Anzahl Replicas> deployment/<Name des Deployments>|
 verändert werden.
 
-% \begin{lstlisting}[caption={Ein Deployment, das schrittweise ein Update ausführt \cite{Schmeling_Dargatz_2022} (S. 31).}, label={lst:deploy-rollout}]
-% NAME                   DESIRED   CURRENT   READY   AGE
-% webserver-54596f9745   3         3         3       48s
-% webserver-57db766469   1         1         0       5s
+\begin{lstlisting}[caption={Ein Deployment, das schrittweise ein Update ausführt \cite{Schmeling_Dargatz_2022} (S. 31).}, label={lst:deploy-rollout}]
+NAME                   DESIRED   CURRENT   READY   AGE
+webserver-54596f9745   3         3         3       48s
+webserver-57db766469   1         1         0       5s
 
-% NAME                   DESIRED   CURRENT   READY   AGE
-% webserver-54596f9745   2         2         2       53s
-% webserver-57db766469   2         2         1       10s
+NAME                   DESIRED   CURRENT   READY   AGE
+webserver-54596f9745   2         2         2       53s
+webserver-57db766469   2         2         1       10s
 
-% NAME                   DESIRED   CURRENT   READY   AGE
-% webserver-54596f9745   0         0         0       1m10s
-% webserver-57db766469   3         3         3       27s
-% \end{lstlisting}
+NAME                   DESIRED   CURRENT   READY   AGE
+webserver-54596f9745   0         0         0       1m10s
+webserver-57db766469   3         3         3       27s
+\end{lstlisting}
 
 \subsection{Services}
 Innerhalb eines Kubernetes-Clusters besteht ein internes Netzwerk. Dementsprechend hat auch jeder Pod
@@ -517,12 +517,12 @@ eine eigene IP-Adresse, über die er erreichbar ist. Diese IP-Adresse wird autom
 Auf diese Weise können Anwendungen innerhalb des Clusters über Pod-Grenzen hinweg miteinander kommunizieren.
 Listing \ref{lst:pod-ip} zeigt die Ausgabe von \lstinline|kubectl get pods -o wide|, in der auch die IP-Adressen
 der einzelnen Pods aufgeführt sind \cite{Schmeling_Dargatz_2022} (S. 36-37).
-% \begin{lstlisting}[caption={\lstinline|kubectl get pods -o wide| veranschautlicht, dass jeder Pod seine eigene IP-Adresse erhält. Die Ausgabe wurde zur besseren Lesbarkeit gekürzt \cite{Schmeling_Dargatz_2022} (S. 35).}, label={lst:pod-ip}]
-% NAME              READY   STATUS    AGE  ...   IP           
-% webserver-9c44s   1/1     Running   6s   ...   10.244.0.15
-% webserver-p5tcb   1/1     Running   6s   ...   10.244.0.16
-% webserver-vccrb   1/1     Running   6s   ...   10.244.0.17
-% \end{lstlisting}
+\begin{lstlisting}[caption={\lstinline|kubectl get pods -o wide| veranschautlicht, dass jeder Pod seine eigene IP-Adresse erhält. Die Ausgabe wurde zur besseren Lesbarkeit gekürzt \cite{Schmeling_Dargatz_2022} (S. 35).}, label={lst:pod-ip}]
+NAME              READY   STATUS    AGE  ...   IP           
+webserver-9c44s   1/1     Running   6s   ...   10.244.0.15
+webserver-p5tcb   1/1     Running   6s   ...   10.244.0.16
+webserver-vccrb   1/1     Running   6s   ...   10.244.0.17
+\end{lstlisting}
 
 Abgesehen davon, dass es recht umständlich ist, die IP-Adressen der einzelnen Pods herauszufinden,
 ergibt sich die eigentliche Herausforderung daraus, dass Pods jederzeit beliebig gelöscht
@@ -550,9 +550,13 @@ Kubernetes unterscheidet zwischen den Service-Typen \emph{ClusterIP} und \emph{N
 Während der in Listing \ref{lst:svc-config} verwendete Wert ClusterIP genutzt wird, um einen Service
 (und die zugehörigen Pods) \emph{innerhalb} eines Clusters
 einheitlich adressierbar zu machen, wird NodePort verwendet, um einen Service von \emph{außerhalb}
-über die öffentlichen IP-Adressen der Nodes des Clusters an einem zufällig gewählten Port erreichbar zu machen \cite{Schmeling_Dargatz_2022} (S. 36-38).
-% \lstinputlisting[caption={Ein beispielhaftes Manifest zur Konfiguration eines Service \cite{Schmeling_Dargatz_2022} (S. 36).}, label=lst:svc-config]{../kubernetes/nginx/service.yaml}
-% TODO: Evtl. Bild, das die IP-Adressräume in Kubernetes visualisiert
+über die öffentlichen IP-Adressen der Nodes des Clusters
+an einem zufällig gewählten Port erreichbar zu machen.
+Der Typ ClusterIP wird also dazu genutzt, dass beispielsweise mehrere Pods \emph{innerhalb}
+des Clusters miteinander kommunizieren können, während NodePorts zum Beispiel genutzt werden können,
+wenn man die Nutzeroberfläche einer Anwendung von \emph{außerhalb}
+über einen Webbrowser erreichen möchte \cite{Schmeling_Dargatz_2022} (S. 36-38).
+\lstinputlisting[caption={Ein beispielhaftes Manifest zur Konfiguration eines Service \cite{Schmeling_Dargatz_2022} (S. 36).}, label=lst:svc-config]{../kubernetes/nginx/service.yaml}
 
 \subsection{Ingress}
 \label{sec:Ingress}
@@ -561,14 +565,16 @@ ist die gängigere Lösung, um das Cluster von außerhalb erreichbar zu machen, 
 In der Definition eines Ingress kann ein Hostname und ein dazugehöriger interner Service gesetzt werden.
 Anfragen an diesen Hostnamen werden dann an den zugehörigen Service weitergeleitet. Über unterschiedliche Hostnamen
 oder Subdomains, die mit verschiedenen Services verknüpft werden, können Anfragen an den Ingress flexibel
-an die richtigen Services weitergeleitet werden. Das Verhalten eines Ingress kann mit dem eines \emph{Reverse Proxy} \cite{nginx}
+an die richtigen Services weitergeleitet werden.
+Das Verhalten eines Ingress kann mit dem eines \emph{Reverse Proxy}\footnote{Ein Reverse Proxy
+  ist ein Server, der transparent Anfragen an andere Server weiterleitet \cite{nginx}.}
 verglichen werden.
 Ein Beispiel für ein Ingress-Manifest ist in Listing \ref{lst:ingress-config} aufgeführt.
 Für die Anwendung muss lediglich der Part in den spitzen Klammern durch die IP-Adresse eines Nodes
 oder durch einen Domain-Namen, der auf die IP-Adresse eines Nodes verweist, ersetzt werden.
 Alle Anfragen an die eingetragene Adresse werden dann an den webserver-Service
 und von dort an die webserver-Pods weitergeleitet. \cite{Schmeling_Dargatz_2022} (S. 38-40).
-% \lstinputlisting[caption={Ein beispielhaftes Manifest zur Konfiguration eines Ingress \cite{Schmeling_Dargatz_2022} (S. 38-39).}, label=lst:ingress-config]{../kubernetes/nginx/ingress.yaml}
+\lstinputlisting[caption={Ein beispielhaftes Manifest zur Konfiguration eines Ingress \cite{Schmeling_Dargatz_2022} (S. 38-39).}, label=lst:ingress-config]{../kubernetes/nginx/ingress.yaml}
 
 
 \subsection{Volumes}
@@ -596,9 +602,9 @@ Listing \ref{lst:deploy-pvc} dargestellt. In diesem wird unter anderem festgeleg
 welches PVC zu nutzen ist (Wert zum Schlüssel \emph{claimName}) und welcher Container
 innerhalb des Pods das PV auf welchen Pfad abbildet \cite{Schmeling_Dargatz_2022} (S. 41-47).
 
-% \lstinputlisting[caption={Ein beispielhaftes Manifest zur Konfiguration eines Persistent Volume \cite{Schmeling_Dargatz_2022} (S. 43).}, label=lst:pv]{../kubernetes/nginx/pv.yaml}
-% \lstinputlisting[caption={Ein beispielhaftes Manifest zur Konfiguration eines Persistent Volume Claims \cite{Schmeling_Dargatz_2022} (S. 44).}, label=lst:pvc]{../kubernetes/nginx/pvc.yaml}
-% \lstinputlisting[caption={Auszug aus einem beispielhaften Manifest für ein Deployment, das ein Persistent Volume Claim einbindet \cite{Schmeling_Dargatz_2022} (S. 45-46).}, label=lst:deploy-pvc]{../kubernetes/nginx/pvc-deployment.yaml}
+\lstinputlisting[caption={Ein beispielhaftes Manifest zur Konfiguration eines Persistent Volume \cite{Schmeling_Dargatz_2022} (S. 43).}, label=lst:pv]{../kubernetes/nginx/pv.yaml}
+\lstinputlisting[caption={Ein beispielhaftes Manifest zur Konfiguration eines Persistent Volume Claims \cite{Schmeling_Dargatz_2022} (S. 44).}, label=lst:pvc]{../kubernetes/nginx/pvc.yaml}
+\lstinputlisting[caption={Auszug aus einem beispielhaften Manifest für ein Deployment, das ein Persistent Volume Claim einbindet \cite{Schmeling_Dargatz_2022} (S. 45-46).}, label=lst:deploy-pvc]{../kubernetes/nginx/pvc-deployment.yaml}
 
 \subsection{ConfigMaps und Secrets}
 Die Daten, die von einer Anwendung in Volumes gespeichert werden, unterliegen oft regelmäßigen Veränderungen
@@ -611,12 +617,15 @@ Unter dem Schlüssel \emph{data} sind Host und Port einer Datenbankanwendung ang
 die von anderen Anwendungen genutzt werden können. Dazu müssen sie in der Konfiguration des
 Deployments eingebunden werden. Ein Beispiel dazu ist in Listing \ref{lst:deploy-with-conf} dargestellt \cite{Schmeling_Dargatz_2022} (S. 47-50).
 
-% \lstinputlisting[caption={Ein beispielhaftes Manifest zur Erstellung einer ConfigMap, die Umgebungsvariablen für die Konfiguration einer Datenbankanwendung enthält.}, label=lst:config]{../kubernetes/nginx/config.yaml}
+\lstinputlisting[caption={Ein beispielhaftes Manifest zur Erstellung einer ConfigMap, die Umgebungsvariablen für die Konfiguration einer Datenbankanwendung enthält.}, label=lst:config]{../kubernetes/nginx/config.yaml}
 
 
 Neben ConfigMaps gibt es auch \emph{Secrets}, die ihre Daten ebenfalls in Schlüssel-Wert-Paaren speichern.
 Der Unterschied ist, dass die Werte, die in Secrets eingetragen werden, üblicherweise geheim bleiben sollen und
-dass sie base64 \cite{rfc4648} kodiert sind. Innerhalb der Pods werden die Werte automatisch dekodiert.
+dass sie
+base64\footnote{base64 ist eine Enkodierung, die beliebige Sequenzen auf eine Zeichenkette aus Zahlen sowie Groß- und Kleinbuchstaben abbildet.
+  Eine base64 enkodierte Zeichenkette muss nicht notwendigerweise für Menschen lesbar sein \cite{rfc4648}.} kodiert sind.
+Innerhalb der Pods werden die Werte automatisch dekodiert.
 Eine angemessene Sicherheitskonfiguration des Clusters vorausgesetzt, zum Beispiel durch die Verschlüsselung des Etcd,
 werden Secrets sicher gespeichert und vor unbefugtem Zugriff geschützt \cite{Schmeling_Dargatz_2022} (S. 51).
 Aus Listing \ref{lst:secret} ist eine beispielhafte Strukturierung eines Secrets ersichtlich.
@@ -625,26 +634,26 @@ um Secrets zu verwalten. Der Typ Opaque erlaubt das Festlegen eines beliebigen W
 Listing \ref{lst:deploy-with-conf} enthält ebenfalls ein Beispiel, wie Werte aus einem
 Secret oder aus einer ConfigMap in ein Deployment eingebunden werden können.
 
-% \lstinputlisting[caption={Ein beispielhaftes Manifest zur Erstellung eines Secrets, das vertrauliche Daten im Cluster bereitstellt.}, label=lst:secret]{../kubernetes/nginx/secret-example.yaml}
-% \begin{lstlisting}[caption={Referenzen zur ConfigMaps und Secrets können in einem Deployment unter dem Schlüssel \emph{env} definiert werden \cite{Schmeling_Dargatz_2022} (S. 50).}, label={lst:deploy-with-conf}]
-% ...
-% spec:
-%   containers:
-%   ...
-%     env:
-%       - name: POSTGRES_HOST
-%         valueFrom:
-%           configMapKeyRef:
-%             name: postgres-config
-%             key: POSTGRES_HOST
-%       ...
-%       - name: POSTGRES_PASSWORD
-%         valueFrom:
-%           secretKeyRef:
-%             name: postgres-secret
-%             key: POSTGRES_PASSWORD
-%       ...
-% \end{lstlisting}
+\lstinputlisting[caption={Ein beispielhaftes Manifest zur Erstellung eines Secrets, das vertrauliche Daten im Cluster bereitstellt.}, label=lst:secret]{../kubernetes/nginx/secret-example.yaml}
+\begin{lstlisting}[caption={Referenzen zur ConfigMaps und Secrets können in einem Deployment unter dem Schlüssel \emph{env} definiert werden \cite{Schmeling_Dargatz_2022} (S. 50).}, label={lst:deploy-with-conf}]
+...
+spec:
+  containers:
+  ...
+    env:
+      - name: POSTGRES_HOST
+        valueFrom:
+          configMapKeyRef:
+            name: postgres-config
+            key: POSTGRES_HOST
+      ...
+      - name: POSTGRES_PASSWORD
+        valueFrom:
+          secretKeyRef:
+            name: postgres-secret
+            key: POSTGRES_PASSWORD
+      ...
+\end{lstlisting}
 
 Die Daten aus ConfigMaps und Secrets werden den Anwendungen innerhalb der Pods als Umgebungsvariablen
 bereitgestellt und können darüber ausgelesen werden \cite{Schmeling_Dargatz_2022} (S. 47-51).
@@ -677,7 +686,25 @@ ohne Gefahr zu laufen, Ressourcen anderer Namespaces zu beeinflussen.
 Namespaces eines Clusters können über die Befehle \lstinline|kubectl create ns <name>| und
 \lstinline|kubectl get ns| erstellt und angezeigt werden \cite{Schmeling_Dargatz_2022} (S. 52-53).
 
+\subsection{Helm Charts}
+Mit den bisher genannten Komponenten ist es möglich, Anwendungen unter Nutzung von
+Kubernetes zu betreiben. Für eine vollständige Anwendung müssen dazu aber mitunter
+mehrere verschiedene Manifeste mit zum Teil redundanten Werten, wie zum Beispiel
+Namen oder Labels, erstellt werden.
+Dies kann durch die Verwendung von \emph{Helm} vereinfacht werden. % TODO: Fußnote für Helm?
+Helm ist eine \emph{templating language} (dt. Vorlagensprache) für
+Kubernetes-Manifeste. Redundante Werte können in den Manifesten
+durch Platzhalter ersetzt werden, wodurch sie zu \emph{templates} werden.
+In einer zentralen Datei \emph{values.yaml} werden die konkreten Werte definiert.
+Zusammen bilden diese beiden Komponenten ein \emph{Helm Chart}.
+Helm Charts bieten weiterhin grundlegende Kontrollstrukturen (if/else) und Schleifen (for-each),
+die die Nutzung der Templates flexibler machen.
+Insgesamt erlauben das einfache und transparente Ausbringen von Anwendungen
+und werden daher unter anderem in den Bereichen Softwareentwicklung und Betrieb genutzt
+(vgl. \ref{sec:devops}) \cite{Schmeling_Dargatz_2022} (S. 174-176).
+
 \section{Kubernetes in Softwareentwicklung und Betrieb}
+\label{sec:devops}
 Container und Kubernetes können dazu beitragen, die Arbeit von Personal in Softwareentwicklung und
 Betrieb zu vereinfachen und damit Anwendungen schneller von der Entwicklung
 in eine Produktivumgebung zu bringen.
@@ -687,7 +714,7 @@ und \emph{GitOps}. Diese Konzepte und deren Mehrwert sollen in diesem Kapitel vo
 
 \subsection{Deployment Environments}
 Für das Verständnis der folgenden Unterkapitel muss erst geklärt werden,
-welche Schritte Software von der Entwicklung bis zur Ausbringung (eng. Deplyoment) an den
+welche Schritte Software von der Entwicklung bis zur Ausbringung (eng. Deployment) an den
 Nutzenden durchläuft.
 Schmeling und Dargatz \cite{Schmeling_Dargatz_2022} (S. 246-249) schlagen dazu
 fünf aufeinanderfolgende Umgebungen (eng. Environments) vor, die im Rahmen
@@ -959,26 +986,6 @@ auf der Cloud betreiben zu wollen \cite{cncf}.
 Vor diesem Hintergrund ist auch nachvollziehbar, dass es Autoren gibt, die vermuten,
 dass Kubernetes in der Zukunft weniger sichtbar wird. Nicht weil es an Bedeutung verliert,
 sondern weil es sich nach und nach als Standard etablieren wird \cite{domingus2022cloud} (S. 13) \cite{Schmeling_Dargatz_2022} (S. 2).
-
-
-% TODO: Monitoring, Logging and Health Checking?
-% TODO: "StatefulSets, DaemonSets, and Jobs" Kapitel ergänzen
-% TODO: Anbieter von Cloud Plattformen vergleichen GKS, AWS, Azure
-
-% TODO Fazit:
-% - Vergleich zu anderen Container-Orchestrierungs Tools Bentaleb_Belloum_Sebaa_El S.13ff und Tabelle 2
-% TODO: Ausblick
-% - Weitere Anwendungsgebiete von Containern (und damit auch Kubernetes) Bentaleb_Belloum_Sebaa_El S. 21ff.
-% - Weitere Clusterlösungen?: Für Kubernetes Cluster in Produktivumgebungen sind zum Beispiel \emph{Rancher}, \emph{OpenShift} oder \emph{Tanzu} 
-
-% \cite{Schmeling_Dargatz_2022}
-
-% S. 174
-% Helm als Tool für Kubernetes Deployments. Helm ist templating language für Kubernetes Manifeste
-% Helm ersparte redundante Werte in den Manifesten. Zentrales values.yaml
-% Helm macht Releases transparent und vereinfacht rollbacks
-% Verschiedene values.yaml für verschiedene Umgebungen möglich
-% values.yaml haben Schleifen und Kontrollstrukturen
 
 \newpage
 \section{Anhang}
