--- a/document/Kubernetes.tex
+++ b/document/Kubernetes.tex
@@ -882,7 +882,8 @@ einen Mehrwert erzeugt.
 Zalando ist ein Unternehmen, das 2008 gegründet wurde und das sich auf den Verkauf
 von Bekleidung im Internet spezialisiert hat. Es beschäftigt über 14.000 Angestellte,
 ist in 15 Ländern aktiv und hatte im Jahr 2016 einem Umsatz von 3,6 Milliarden Euro.
-Zalandos Service basierte ursprünglich auf PHP \cite{php}, was einen einfachen Start ermöglichte,
+Zalandos Service basierte ursprünglich auf PHP\footnote{PHP ist eine Skriptsprache, die besonders für Web-Entwicklung
+  geeignet ist \cite{php}.}, was einen einfachen Start ermöglichte,
 aber langfristig mit wachsenden Anforderungen an die Skalierbarkeit nur schwer mithalten konnte.
 Daher begann das Unternehmen ab 2016 seine Anwendungen so zu verändern, dass sie
 in eine Cloud-Umgebung migriert werden können. Als Cloud-Umgebung wurde Amazon Web Services (AWS),
@@ -947,7 +948,7 @@ Das Vorgehen dazu war aber meist anwendungsspezifisch und erforderte spezifische
 Durch \mbox{ReplicaSets} bietet Kubernetes eine Lösung, die Teil der Plattform ist
 und alle Arten von Anwendungen auf die gleiche Weise replizieren kann.
 Mit Kubernetes definierte Deployments schaffen ebenfalls kein gänzlich neues Konzept.
-Sie tragen aber dazu bei, einen vorher vielfältigen Prozess zu vereinheitlichen,
+Sie tragen aber dazu bei, eine vorher vielfältige Prozesslandschaft zu vereinheitlichen,
 zu automatisieren und nachvollziehbar sowie replizierbar zu machen.
 Insgesamt kann Kubernetes auf diese Weise dazu beitragen, dass
 Anwendungen schneller weiterentwickelt, kontrolliert ausgebracht und
